--- a/index.html
+++ b/index.html
@@ -5,65 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caprena Richie</title>
+    <link><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="pink-border background"> 
+    <button onclick="simple_button" type="button" value="button" class = "button">
+        About Me:
+    </button>
+    <button onclick="contact_button" type="contact" value="contact" class = "button1">
+        Contact Me:
+    </button>
+    <script>
+        document.querySelector('.button')
+    </script>
+    <header>
+         <section>
+            <h1 class = "logo-container mediumfont border">Caprena Richie</h1>
+            <h1 class = "logo-container smallfont border">Introducing CREATIVE VISIONS</h1>
+            <img class="profile-pic" src="images/IMG_0633.jpg" alt="">
+        </section>
+        <section>
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/softwaredevpic.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/portfolio2.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/portfolio3.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/gitpic.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+               <!--- <button type="button" class="btn btn-primary btn-sm">Small button</button>
+                <button type="button" class="btn btn-secondary btn-sm">Small button</button> -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button> 
+        </div>
+        <div class="links">
+            <a href="images/softwaredevpic.jpg">1</a>
+            <a href="images/portfolio2.png">2</a>
+            <a href="images/portfolio3.png">3</a>
+            <a href="images/gitpic.png">4</a>
+        </div> 
+        </section>
+    </header>
+         <section>
+            <div >
+                <p class="fw-bolder">A determined, passionate person who is excited and ready to use my skills
+                    as a developer to be an asset to a thriving company.
+                </p>
+            </div>
+         </section>
+
+    <div class="smallfont contact">
+        <h1 class="smallfont">Contact Me:</h1>
+        <ul class="smallfont"> 
+            <li><a href="tel:589-405-3849">Phone: 589-405-3849</a></li>
+            <li><a href="mail to:robcaprena@gmail.com">Email: robcaprena@gmail.com</a></li>
+        </ul>
+    </div>  
+    
     <section>
-        <h1>Caprena Richie</h1>
-        <img src="IMG_0633.jpg" alt="">
-        <p>I would describe myself as a determined, passionate person who loves helping others. 
-           I have a wonderful husband of 25 years and an active 12 year old son with a big heart.</p>
-    </section>  
-    <ul>
-        <li><a href="tel:502-445-3510">502-445-3510</a></li>
-        <li><a href="mail to:robcaprena@gmail.com">robcaprena@gmail.com</a></li>
-    </ul>
-    <section>
-        <h1>Premier Dental Care: Office Manager</h1>
-        <p>
-            As an Office Manager, I managed all phases of the Dental practice. I was the liaison 
-            between the doctors and patients in discussing treatment/payments plans. I was also 
-            responsible for posting dental transactions using Softdent software, verifying and 
-            filing insurance claims, as well as maintaining and purchasing office supplies. In addition 
-            to handling collections and generating monthly statements, I was also responsible for 
-            accounts payables, accounts receivables, payroll, quarterly estimated taxes, orchestrating 
-            monthly staff meetings, assisting with staff scheduling and maintaining the smooth 
-            flow and operation of the office with both staff and patients.
-        </p>
+        <h1 class="smallfont fw-bolder">Work Experience:</h1>
+        <ul>
+            <li>Full Stack Developer specializing in .NET</li>
+            <li>Specializing in MySQL</li>
+            <li>Designing database structures and tables</li>
+        </ul>
     </section>
     <section>
-        <h1>AFJ Computer Services(Publisher's Press), Inc.: RPG AS/400 Programmer</h1>
+        <h1 class="smallfont fw-bolder">Education:</h1>
         <p>
-            Worked as a Contractor converting flat files in the Information System's
-            Department. After 3 months, I was offered permanent full-time employment
-            which I graciously declined due to the fact that I was also a volunteer
-            full-time missionary and only had need of part-time employment. Continued 
-            to work for 2 years as a Bookkeeper for AFJ Computer Services, Inc.
+            Attended TrueCoders Full Stack Software Engineering Program. Projects included
+            multiple personal and group-oriented tasks that involved multiple programming
+            languages over the course of the 9-week program.
         </p>
+        <ul>
+            <li>Over 500 hours of intensive, project-based training in programming languages and other
+                technical skills, such as C#, .NET Core, SQL, Git, ASP.NET, MVC, HTML, and CSS</li>
+            <li>These skills were developed by building multiple C# and SQL projects</li>
+            <li>C# and SQL Projects were tracked using Git and GitHub for source control</li>
+
+        </ul>
     </section>
     <section>
-        <h1>John Tyler High: Tyler, TX</h1>
-        <p>
-            Accomplishments and Awards:
-                *National Honor Society 
-                *Who's Who Among America's High School Students
-                *Perfect Attendance (10 years consecutively)
-                *Clerk/Typist Award
-                *Shorthand Award - 90 wpm
-                *3.68 GPA (Graduated 18th out of approximately 450 students)
-        </p>
+        <h1 class="smallfont fw-bolder">Skills:</h1>
+        <ul>
+            <li>.NET Technologies and Languages:</li>
+            <h1 class="smallerfont">**C#, **ASP.Net</h1>
+            <li>Web Technologies and Languages:</li>
+            <h1 class="smallerfont">**HTML, **CSS</h1>
+            <li>Databases:</li>
+            <h1 class="smallerfont">**MySQL</h1>
+       </ul>
     </section>
     <section>
-        <h1>AFJ Computer Serivices, Inc: RPG AS/400 Programming</h1>
-        <p>
-            Hired by Owner to work as contractor under her for a Publishing Company
-        </p>
-    </section>
-    <section>
-        <h1>Volunteer Work</h1>
-        <p>
+        <h1 class="smallfont fw-bolder" >Volunteer Work</h1>
+        <p id="UniqueID">
             Full-time voluntary missionary work (Devoted 850 hours annually for
-            20 years consecutively)
+            20 years consecutively). Listed to show my dedication as well as my 
+            earnest desire and determinationto grow and learn new things.
         </p>
-    </section>                       
+    </section>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>                     
 </body>
 </html>
