--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="smallfont contact" style= "width: 500px;">
         <ul class="smallfont"> 
                 <li><a href="tel:589-405-3849">Phone: 589-405-3849</a></li>
-                <li><a href="mail to:robcaprena@gmail.com">Email: robcaprena@gmail.com</a></li>
+                <li><a href="mailto:robcaprena@gmail.com?">Email: robcaprena@gmail.com</a></li>
                 <li> <a href="https://www.linkedin.com/in/caprena-richie-093653b7/">LinkedIn: caprena-richie-093653b7</a></li>
             </ul>
         </div>  
