updated github projects and experience icons

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         to continue to build my strength as a teamplayer and be an asset, helping with the improvement, efficiency and growth of my future employer.
                     </p>
                     <button id="button">
-                        <a href="https://docs.google.com/document/d/1miTNhn7OEpfz9DyFEcpOZEPR8V9us0KTIGvj_aKV4j0/edit?usp=sharing">View My Resume</a>
+                        <a href="https://drive.google.com/file/d/1WcWBsa4SzC_iAcw6da6dk1ccYI0S_WQ9/view?usp=sharing">View My Resume</a>
                     </button>
                 </section>
                 <section>
@@ -94,6 +94,14 @@
                         <i class="fa-solid fa-hashtag"></i>
                         <span>I have experience in C#</span>
                     </section>
+                    <section>
+                        <i class="fa-brands fa-node"></i>
+                        <span>I have experience in Node/Express</span>
+                    </section>
+                    <section>
+                        <i class="fa-brands fa-react"></i></i>
+                        <span>I have experience in React</span>
+                    </section>
                 </section>
             </section>
         </section>
@@ -102,38 +110,30 @@
             <h2 id="projects">Projects</h2>
             <section class="row">
                     <section class="project-card">
-                        <a href="https://github.com/Caprena1/xca-classwork/blob/master/HTML/USING%20TABLES%20/concertevent.html">
-                        <img src="images/tables.png" alt="Box Model">
+                        <a href="https://github.com/Caprena1/hangmanjs">
+                        <img src="images/hangman.jpeg" alt="Hangman Game">
                         </a>
                         <br>
-                        <p>Tables-A demonstration of implementing tables
-                            and rows by putting together a layout of a concert 
-                            event and using them to organize the events by 
-                            band, location and time. Background color was also 
-                            added to clearly distinguish each group.</p>
+                        <h2>Hangman Game</h2>
+                        <p>An application that includes being able to select a category, view the number of lives remaining, submit a guess, and receive a hint. This project demonstrated front end web application development using a client side only web application by implementing HTML, CSS, and JavaScript.</p>
                     </section>
 
                     <section class="project-card">
-                        <a href="https://github.com/Caprena1/xca-classwork/tree/master/CSS/FLOAT-PUPPYTHERAPY">
-                            <img src="./images/puppyipsum.png" alt="Puppy Ipsum">
+                        <a href="https://github.com/Caprena1/ExpressWeatherApp">
+                            <img src="images/weatherapi.jpeg" alt="Weather API">
                         </a>
                         <br>
-                        <p>Floating-In this project a demonstration of how to
-                        float pictures to various areas on the website was shown.
-                        A website on puppies and puppy therapy was created using
-                        pictures imported from Google as well as pictures from my
-                        personal library of our puppy Milo.</p>
+                        <h2>Weather API</h2>
+                        <p>Created a full stack express weather app that implemented Express backend as well as use Pug for the front end. This program enables a user to type in the name of a city and receive the current forecast of that city in real time.</p>
                     </section>
 
                     <section class="project-card">
-                        <a href="https://github.com/Caprena1/youtubecardgridbox">
-                            <img src="./images/youtube-grid pic.png" alt="You Tube Grid">
+                        <a href="https://github.com/Caprena1/redditclonenatureproject">
+                            <img src="images/redditclone.jpeg" alt="Nature Reddit Clone">
                         </a>
                         <br>
-                        <p>Flex and Grid-Implementation of both flex boxes and grid
-                        boxes being demonstrated by creating a YouTube. The flex card was 
-                        then used to YouTube home page with 5 additional cards-6 total. 
-                        A navbar and sidenav bar were also added using flex boxes.</p>
+                        <h2>Nature Reddit Clone</h2>
+                        <p>The program was used implementing Express, a Pug file that connected to a JS file and Postgresql to create a database. New posts are also able to be made within the application with the ability to display and modify likes by using the upvote/downvote buttons.</p>
                     </section>
             </section>   
         </section>
