added doterra oil app in projects

--- a/index.html
+++ b/index.html
@@ -128,8 +128,16 @@
                         </a>
                         <br>
                         <h2>Nature Reddit Clone</h2>
-                        <p>The program was used implementing Express, a Pug file that connected to a JS file and Postgresql to create a database. New posts are also able to be made within the application with the ability to display and modify likes by using the upvote/downvote buttons.</p>
+                        <p>This web application was created by implementing Express, a Pug file that connected to a JS file and Postgresql to create a database. New posts are also able to be made within the application with the ability to display and modify likes by using the upvote/downvote buttons.</p>
                     </section>
+                    <section class="project-card">
+                        <a href="https://github.com/Caprena1/DoterraOilApp">
+                            <img src="images/doterraoilapp.png" alt="Doterra Oil App">
+                        </a>
+                        <br>
+                        <h2>Doterra Oil App</h2>
+                        <p>This web application was created by implementing Node Express, a Pug file that connected to a JS file and Postgresql to create my own database as no open source API was available. Inputs allow to search for oils by name as well as populate oils based on a condition/illness.</p>
+                    </section>  
             </section>   
         </section>
     </section>
